fixing some text, scrollable, spacing

--- a/layouts/style.css
+++ b/layouts/style.css
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   font-family: "Roboto Variable", sans-serif;
+  overflow-y: scroll;
 }
 * {
   box-sizing: border-box;
